[package]
name = "pipeline-runner-oidc-server"
version = "1.0.1"
edition = "2024"

[dependencies]
axum = "0.8.4"
config = "0.15.11"
jose-jwk = "0.1.2"
rsa = { version = "0.9.2", features = ["default"] }
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v5"] }
